# webmun

./: .env.example  .gitignore  Makefile  README.md  SYSTEM.md  docker-compose.yml  protocol.md  schema.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/access/: models.py  repository.py  service.py  views.py
backend/app/auth/: dep.py  service.py
backend/app/committee/: engine.py  manager.py  schemas.py  service.py  views.py
backend/app/core/: config.py  database.py  dep.py
backend/app/session/: engine.py  enums.py  manager.py  models.py  repository.py  schemas.py  service.py  views.py
backend/app/tests/: conftest.py
backend/app/tests/access/: __init__.py  test_service.py
backend/app/tests/auth/: test_service.py
backend/app/tests/session/: test_engine.py  test_service.py  test_views.py  test_websocket.py
frontend/: .env.example  Dockerfile  README.md  eslint.config.js  index.html  openapi-ts.config.ts  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api.ts  supabaseClient.ts  utils.test.ts
frontend/src/pages/: CreateComittee.tsx  CreateCommittee.tsx  DashboardSection.tsx  Home.tsx  Login_page.tsx  Session.tsx  UserDashboard.tsx
frontend/src/schemas/: types.gen.ts
frontend/src/store/: useCommitteeStore.test.ts  (+1 more)
supabase/: README.md  config.toml  seed.sql  users.sql
supabase/migrations/: 20260719224327_create_initial_tables.sql  20260719224327_create_sessions_table.sql
(+39 files in other folders)
